--- a/snail/src/main/resources/config/system.properties
+++ b/snail/src/main/resources/config/system.properties
@@ -29,9 +29,9 @@ acgist.system.stun.server=stun:stun1.l.google.com:19302
 # 删除任务是否删除文件
 acgist.task.file.delete=false
 #================ 端口 ================#
-# 系统服务端口
+# 系统服务端口（本地服务：启动检测）
 acgist.service.port=16888
-# BT服务端口（Peer、DHT、UTP、STUN）
+# BT服务端口（本地端口：Peer、DHT、UTP、STUN）
 acgist.torrent.port=18888
 #================ 数量 ================#
 # 单个任务Peer数量（同时下载）
