--- a/snail/src/main/resources/config/bt.tracker.properties
+++ b/snail/src/main/resources/config/bt.tracker.properties
@@ -1,4 +1,4 @@
-#================ Tracker服务器默认配置（UDP/HTTP） ================#
+#================ 默认Tracker服务器配置（UDP/HTTP） ================#
 # 优先使用UserDir目录下的bt.tracker.properties配置
 # 格式：index=AnnounceUrl
 0001=udp://9.rarbg.to:2710/announce
