--- a/snail/src/main/resources/logger.properties
+++ b/snail/src/main/resources/logger.properties
@@ -7,7 +7,7 @@ logger.system=Snail
 logger.adapter=file, console
 # 文件日志名称
 logger.file.name=logs/snail.log
-# 文件日志缓存
+# 文件日志缓存（byte）
 logger.file.buffer=8192
-# 文件日志最大备份时间
+# 文件日志最大备份时间（天）
 logger.file.max.days=30
