--- a/snail/src/main/resources/config/system.properties
+++ b/snail/src/main/resources/config/system.properties
@@ -49,6 +49,8 @@ acgist.dht.interval=120
 acgist.pex.interval=120
 # 本地发现执行周期（秒）
 acgist.lsd.interval=120
+# Have消息执行周期（秒）
+acgist.have.interval=30
 # Tracker执行周期（秒）
 acgist.tracker.interval=120
 # Peer（连接、接入）优化周期（秒）
