删除任务文件改为用户配置

--- a/snail/src/main/resources/config/download.properties
+++ b/snail/src/main/resources/config/download.properties
@@ -5,6 +5,8 @@ acgist.download.path=/download
 acgist.download.size=4
 # 消息提示
 acgist.download.notice=true
+# 删除文件
+acgist.download.delete=false
 # 下载速度（单个）（KB）
 acgist.download.buffer=1024
 # 最后一次选择目录
