--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -18,8 +18,15 @@ jobs:
         java-version: 11
     - name: Build with Maven
       run: mvn clean package -P release -D gpg.skip=true -D maven.test.skip=true -B -V --file pom.xml
+    - name: Package Snail
+      run: |
+        mkdir -p ./build/snail/
+        cp -v "./LICENSE" "./build/"
+        cp -v "./docs/logo.ico" "./build/"
+        cp -vr "./snail-javafx/target/lib" "./build/snail/"
+        cp -v "./snail-javafx/target/snail.javafx-${{ steps.get_version.outputs.VERSION }}.jar" "./build/snail/"
     - name: Upload Release Asset
-      uses: actions/upload-release-asset@master
+      uses: actions/upload-artifact@v2
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
