--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -3,6 +3,8 @@ name: release
 on:
   release:
     types: [published]
+  push:
+    branches: [ dev ]
 
 jobs:
   build:
@@ -20,14 +22,17 @@ jobs:
       run: mvn clean package -P release -D gpg.skip=true -D maven.test.skip=true -B -V --file pom.xml
     - name: Package Snail
       run: |
+        echo ${{ matrix.runs-on }}
+        echo ${{ steps.get_version.outputs.VERSION }}
         mkdir -p ./build/snail/
-        cp -v "./LICENSE" "./build/"
-        cp -v "./docs/logo.ico" "./build/"
-        cp -vr "./snail-javafx/target/lib" "./build/snail/"
-        cp -v "./snail-javafx/target/snail.javafx-${{ steps.get_version.outputs.VERSION }}.jar" "./build/snail/"
+        cp -v ./LICENSE ./build/
+        cp -v ./docs/logo.ico ./build/
+        cp -vr ./snail-javafx/target/lib ./build/snail/
+        cp -v ./snail-javafx/target/snail.javafx-${{ steps.get_version.outputs.VERSION }}.jar ./build/snail/
+        tar -cvf snail-${{ matrix.runs-on }}-${{ steps.get_version.outputs.VERSION }}.tar ./build/snail/
     - name: Upload Release Asset
       uses: actions/upload-artifact@v2
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
-        asset_path: ./snail-javafx/target/snail.javafx-*{.msi,.jar}
+        name: snail
+        path: |
+          snail.*.tar
