--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,10 +1,8 @@
 name: release
 
 on:
-  release:
-    types: [published]
   push:
-    branches: [ dev ]
+    tags: [ "v*" ]
 
 jobs:
   build:
@@ -23,13 +21,13 @@ jobs:
     - name: Package Snail
       run: |
         echo ${{ matrix.runs-on }}
-        echo ${{ steps.get_version.outputs.VERSION }}
+        echo ${{ github.ref }}
         mkdir -p ./build/snail/
         cp -v ./LICENSE ./build/
         cp -v ./docs/logo.ico ./build/
         cp -vr ./snail-javafx/target/lib ./build/snail/
-        cp -v ./snail-javafx/target/snail.javafx-${{ steps.get_version.outputs.VERSION }}.jar ./build/snail/
-        tar -cvf snail-${{ matrix.runs-on }}-${{ steps.get_version.outputs.VERSION }}.tar ./build/snail/
+        cp -v ./snail-javafx/target/snail.javafx-${{ github.ref }}.jar ./build/snail/
+        tar -cvf snail-${{ matrix.runs-on }}-${{ github.ref }}.tar ./build/snail/
     - name: Upload Release Asset
       uses: actions/upload-artifact@v2
       with:
