--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -23,7 +23,7 @@ jobs:
         mkdir -p ./build/snail/
         cp -v ./LICENSE ./build/
         cp -v ./docs/logo.ico ./build/
-        cp -vr ./snail-javafx/target/lib ./build/snail/
+        cp -r ./snail-javafx/target/lib ./build/snail/
         cp -v ./snail-javafx/target/snail.javafx-*.jar ./build/snail/
         tar -cvf snail-${{ matrix.runs-on }}.tar ./build/snail/
     - name: Upload Release Asset
