--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -25,7 +25,7 @@ jobs:
         cp -v -r ./docs/logo.ico ./build/
         cp -v -r ./snail-javafx/target/lib ./build/snail/
         cp -v -r ./snail-javafx/target/snail.javafx-*.jar ./build/snail/
-        tar -cvf snail-${{ matrix.runs-on }}.tar -C ./build/ snail/* # windows必须使用星号结尾
+        tar -cvf snail-${{ matrix.runs-on }}.tar -C ./build/ snail
     - name: Upload Release Asset
       uses: actions/upload-artifact@v2
       with:
