--- a/.github/workflows/package.yml
+++ b/.github/workflows/package.yml
@@ -16,17 +16,17 @@ jobs:
       if: ${{ matrix.runs-on }} == "macos-latest"
       env:
         os: mac
-      run: echo ${{ os }}
+      run: echo ${{ env.os }}
     - name: Linux Setting
       if: ${{ matrix.runs-on }} == "ubuntu-latest"
       env:
         os: linux
-      run: echo ${{ os }}
+      run: echo ${{ env.os }}
     - name: Windows Setting
       if: ${{ matrix.runs-on }} == "windows-latest"
       env:
         os: win
-      run: echo ${{ os }}
+      run: echo ${{ env.os }}
     - uses: actions/checkout@v2
     - name: Set up JDK
       uses: actions/setup-java@v1
