--- a/.github/workflows/package.yml
+++ b/.github/workflows/package.yml
@@ -21,7 +21,8 @@ jobs:
       if: matrix.runs-on == 'windows-latest'
       run: |
         echo "system=win" >> $GITHUB_ENV
-        echo "version=${GITHUB_REF##*/}" | Out-File -FilePath $env:GITHUB_PATH -Encoding utf8 -Append
+        echo "system=win" | Out-File -FilePath $env:GITHUB_ENV -Encoding utf8 -Append
+        echo "version=${GITHUB_REF##*/}" | Out-File -FilePath $env:GITHUB_ENV -Encoding utf8 -Append
     - name: Set Version
       run: echo "version=${GITHUB_REF##*/}" >> $GITHUB_ENV
     - uses: actions/checkout@v2
