--- a/.github/workflows/package.yml
+++ b/.github/workflows/package.yml
@@ -20,9 +20,8 @@ jobs:
     - name: Windows Setting
       if: matrix.runs-on == 'windows-latest'
       run: |
-        echo "system=win" >> $GITHUB_ENV
         echo "system=win" | Out-File -FilePath $env:GITHUB_ENV -Encoding utf8 -Append
-        echo "version=${GITHUB_REF##*/}" | Out-File -FilePath $env:GITHUB_ENV -Encoding utf8 -Append
+        echo "version=$GITHUB_REF.substring('/refs/tags/'.length)" | Out-File -FilePath $env:GITHUB_ENV -Encoding utf8 -Append
     - name: Set Version
       run: echo "version=${GITHUB_REF##*/}" >> $GITHUB_ENV
     - uses: actions/checkout@v2
