--- a/.github/workflows/package.yml
+++ b/.github/workflows/package.yml
@@ -21,9 +21,9 @@ jobs:
       if: matrix.runs-on == 'windows-latest'
       run: |
         echo "system=win" | Out-File -FilePath $env:GITHUB_ENV -Encoding utf8 -Append
-        echo "version=${{ env.version }}" | Out-File -FilePath $env:GITHUB_ENV -Encoding utf8 -Append
-      env:
-        version: $GITHUB_REF.substring("/refs/tags/".length)
+        echo "version1=$GITHUB_REF" | Out-File -FilePath $env:GITHUB_ENV -Encoding utf8 -Append
+        echo "version5=$GITHUB_REF.substring("/refs/tags/".length)" | Out-File -FilePath $env:GITHUB_ENV -Encoding utf8 -Append
+        echo "version2="$GITHUB_REF.substring("/refs/tags/".length) | Out-File -FilePath $env:GITHUB_ENV -Encoding utf8 -Append
     - name: Set Version
       run: echo "version=${GITHUB_REF##*/}" >> $GITHUB_ENV
     - uses: actions/checkout@v2
