--- a/.github/workflows/package.yml
+++ b/.github/workflows/package.yml
@@ -22,7 +22,8 @@ jobs:
       run: |
         echo "system=win" | Out-File -FilePath $env:GITHUB_ENV -Encoding utf8 -Append
         echo "version1=$GITHUB_REF" | Out-File -FilePath $env:GITHUB_ENV -Encoding utf8 -Append
-        echo "version5=$GITHUB_REF.substring("/refs/tags/".length)" | Out-File -FilePath $env:GITHUB_ENV -Encoding utf8 -Append
+        echo "version5=$GITHUB_REF.substring('/refs/tags/'.length)" | Out-File -FilePath $env:GITHUB_ENV -Encoding utf8 -Append
+        echo "version2="$GITHUB_REF.substring("/refs/tags/".length) | Out-File -FilePath $env:GITHUB_ENV -Encoding utf8 -Append
     - name: Set Version
       run: echo "version=${GITHUB_REF##*/}" >> $GITHUB_ENV
     - uses: actions/checkout@v2
