--- a/.github/workflows/package.yml
+++ b/.github/workflows/package.yml
@@ -20,9 +20,12 @@ jobs:
     - name: Windows Setting
       if: matrix.runs-on == 'windows-latest'
       run: |
+        $version=${{ github.ref }}
         echo "system=win" | Out-File -FilePath $env:GITHUB_ENV -Encoding utf8 -Append
         echo "version1=${GITHUB_REF}" | Out-File -FilePath $env:GITHUB_ENV -Encoding utf8 -Append
-        echo "version5=${GITHUB_REF.substring('/refs/tags/'.length)}" | Out-File -FilePath $env:GITHUB_ENV -Encoding utf8 -Append
+        echo "version2=${{github.ref}}" | Out-File -FilePath $env:GITHUB_ENV -Encoding utf8 -Append
+        echo "version3=${GITHUB_REF.substring('/refs/tags/'.length)}" | Out-File -FilePath $env:GITHUB_ENV -Encoding utf8 -Append
+        echo "version4=$version" | Out-File -FilePath $env:GITHUB_ENV -Encoding utf8 -Append
     - name: Set Version
       run: echo "version=${GITHUB_REF##*/}" >> $GITHUB_ENV
     - uses: actions/checkout@v2
