--- a/.github/workflows/package.yml
+++ b/.github/workflows/package.yml
@@ -22,9 +22,7 @@ jobs:
       run: |
         $version="${{ github.ref }}".substring("refs/tags/".length)
         echo "system=win" | Out-File -FilePath $env:GITHUB_ENV -Encoding utf8 -Append
-        echo "version1=${GITHUB_REF}" | Out-File -FilePath $env:GITHUB_ENV -Encoding utf8 -Append
-        echo "version2=${{github.ref}}" | Out-File -FilePath $env:GITHUB_ENV -Encoding utf8 -Append
-        echo "version4=$version" | Out-File -FilePath $env:GITHUB_ENV -Encoding utf8 -Append
+        echo "version=$version" | Out-File -FilePath $env:GITHUB_ENV -Encoding utf8 -Append
     - name: Set Version
       run: echo "version=${GITHUB_REF##*/}" >> $GITHUB_ENV
     - uses: actions/checkout@v2
