--- a/.github/workflows/package.yml
+++ b/.github/workflows/package.yml
@@ -25,7 +25,8 @@ jobs:
         echo "version=$version" | Out-File -FilePath $env:GITHUB_ENV -Encoding utf8 -Append
     - name: Set Version
       run: echo "version=${GITHUB_REF##*/}" >> $GITHUB_ENV
-    - uses: actions/checkout@v2
+    - name: Checkout repository
+      uses: actions/checkout@v2
     - name: Set up JDK
       uses: actions/setup-java@v1
       with:
