--- a/.github/workflows/package.yml
+++ b/.github/workflows/package.yml
@@ -6,6 +6,7 @@ on:
 
 jobs:
   build:
+    name: Package
     strategy:
       matrix:
         runs-on: [ macos-latest, ubuntu-latest, windows-latest ]
