--- a/.github/workflows/package.yml
+++ b/.github/workflows/package.yml
@@ -14,16 +14,21 @@ jobs:
     steps:
     - name: Mac Setting
       if: matrix.runs-on == 'macos-latest'
-      run: echo "system=mac" >> $GITHUB_ENV
+      run: |
+        echo "system=mac" >> $GITHUB_ENV
+        echo "args=--type pkg" >> $GITHUB_ENV
     - name: Linux Setting
       if: matrix.runs-on == 'ubuntu-latest'
-      run: echo "system=linux" >> $GITHUB_ENV
+      run: |
+        echo "system=linux" >> $GITHUB_ENV
+        echo "args=--type rpm --linux-shortcut" >> $GITHUB_ENV
     - name: Windows Setting
       if: matrix.runs-on == 'windows-latest'
       run: |
         $version="${{ github.ref }}".substring("refs/tags/".length)
         echo "system=win" | Out-File -FilePath $env:GITHUB_ENV -Encoding utf8 -Append
         echo "version=$version" | Out-File -FilePath $env:GITHUB_ENV -Encoding utf8 -Append
+        echo "args=--type msi --win-shortcut --win-dir-chooser" | Out-File -FilePath $env:GITHUB_ENV -Encoding utf8 -Append
     - name: Set Version
       run: echo "version=${GITHUB_REF##*/}" >> $GITHUB_ENV
     - name: Checkout repository
@@ -42,6 +47,21 @@ jobs:
         cp -v -r ./snail-javafx/target/lib ./build/snail/
         cp -v -r ./snail-javafx/target/snail.javafx-*.jar ./build/snail/
         tar -cvf snail-${{ env.system }}-${{ env.version }}-without-jre.tar -C ./build/ snail
+        jlink --add-modules java.base,java.xml,java.desktop,java.scripting,jdk.unsupported --output ./build/runtime
+        jpackage \
+          --name snail \
+          --app-version ${{ env.version }} \
+          --vendor acgist \
+          --copyright acgist \
+          --description "acgist snail" \
+          --input ./build/snail/ \
+          --main-jar snail.javafx-${{ env.version }}.jar \
+          --runtime-image ./build/runtime \
+          --icon ./build/logo.ico \
+          --license-file ./build/LICENSE \
+          --java-options "-server -Xms128m -Xmx256m -XX:NewRatio=2 -XX:SurvivorRatio=2 -Dfile.encoding=UTF-8" \
+          --dest ./build/ \
+          $args
     - name: Upload Artifact
       uses: actions/upload-artifact@v2
       with:
