--- a/.github/workflows/package.yml
+++ b/.github/workflows/package.yml
@@ -58,7 +58,7 @@ jobs:
     - name: Set up JDK
       uses: actions/setup-java@v1
       with:
-        java-version: 16
+        java-version: 16-ea
     - name: Build with Maven
       run: mvn clean package -P release -D gpg.skip=true -D maven.test.skip=true -B -V --file pom.xml
     - name: Package Snail
@@ -72,21 +72,9 @@ jobs:
         cp -v -r ./snail-javafx/target/snail.javafx-*.jar ./build/snail/
         tar -cvf snail-${{ env.system }}-${{ env.version }}-without-jre.tar -C ./build/ snail
         jlink --add-modules java.base,java.xml,java.desktop,java.scripting,jdk.unsupported --output ./build/runtime
-        jpackage \
-          --name snail \
-          --type ${{ env.suffix }}
-          --app-version ${{ env.version }} \
-          --vendor acgist \
-          --copyright acgist \
-          --description "acgist snail" \
-          --input ./build/snail/ \
-          --main-jar snail.javafx-${{ env.version }}.jar \
-          --runtime-image ./build/runtime \
-          --icon ./build/logo.ico \
-          --license-file ./build/LICENSE \
-          --java-options "-server -Xms128m -Xmx256m -XX:NewRatio=2 -XX:SurvivorRatio=2 -Dfile.encoding=UTF-8" \
-          --dest ./build/ \
-          $args
+        jpackage --name snail --type ${{ env.suffix }} --app-version ${{ env.version }} --vendor acgist --copyright acgist --description "acgist snail" --input ./build/snail/ --main-jar snail.javafx-${{ env.version }}.jar --runtime-image ./build/runtime --icon ./build/logo.ico --license-file ./build/LICENSE --java-options "-server -Xms128m -Xmx256m -XX:NewRatio=2 -XX:SurvivorRatio=2 -Dfile.encoding=UTF-8" --dest ./ $args
+        # 使用mv命令统一文件名称：Windows hub命令不能使用通配符号
+        mv *.${{ env.suffix }} snail-${{ env.version }}.${{ env.suffix }}
         # upload-release-asset不能一次上传多个文件使用hub命令上传
-        hub release edit -a ./snail-${{ env.system }}-${{ env.version }}-without-jre.tar -m "" ${{ env.version }}
-        hub release edit -a ./snail-${{ env.system }}-${{ env.version }}.${{ env.suffix }} -m "" ${{ env.version }}
+        hub release edit -a snail-${{ env.version }}.${{ env.suffix }} -m "${{ env.version }}版本" ${{ env.version }}
+        hub release edit -a snail-${{ env.system }}-${{ env.version }}-without-jre.tar -m "${{ env.version }}版本" ${{ env.version }}
