--- a/.github/workflows/package.yml
+++ b/.github/workflows/package.yml
@@ -15,7 +15,7 @@ jobs:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
         tag_name: ${{ github.ref }}
-        release_name: ${{ github.ref }}版本
+        release_name: ${{ github.ref }}
         draft: false
         prerelease: false
         body: |
@@ -50,7 +50,7 @@ jobs:
         echo "suffix=msi" | Out-File -FilePath $env:GITHUB_ENV -Encoding utf8 -Append
         echo "system=win" | Out-File -FilePath $env:GITHUB_ENV -Encoding utf8 -Append
         echo "version=$version" | Out-File -FilePath $env:GITHUB_ENV -Encoding utf8 -Append
-        echo "args=--win-shortcut --win-dir-chooser" | Out-File -FilePath $env:GITHUB_ENV -Encoding utf8 -Append
+        echo "args=--win-shortcut --win-dir-chooser --win-per-user-install" | Out-File -FilePath $env:GITHUB_ENV -Encoding utf8 -Append
     - name: Set Version
       run: echo "version=${GITHUB_REF##*/}" >> $GITHUB_ENV
     - name: Checkout repository
@@ -76,5 +76,5 @@ jobs:
         # 使用mv命令统一文件名称：Windows hub命令不能使用通配符号
         mv *.${{ env.suffix }} snail-${{ env.version }}.${{ env.suffix }}
         # upload-release-asset不能一次上传多个文件使用hub命令上传
-        hub release edit -a snail-${{ env.version }}.${{ env.suffix }} -m "${{ env.version }}版本" ${{ env.version }}
-        hub release edit -a snail-${{ env.system }}-${{ env.version }}-without-jre.tar -m "${{ env.version }}版本" ${{ env.version }}
+        hub release edit -a snail-${{ env.version }}.${{ env.suffix }} -m "${{ env.version }}" ${{ env.version }}
+        hub release edit -a snail-${{ env.system }}-${{ env.version }}-without-jre.tar -m "${{ env.version }}" ${{ env.version }}
