--- a/.github/workflows/package.yml
+++ b/.github/workflows/package.yml
@@ -35,6 +35,7 @@ jobs:
         echo "suffix=pkg" >> $GITHUB_ENV
         echo "system=mac" >> $GITHUB_ENV
         echo "args=" >> $GITHUB_ENV
+        echo "icon=./docs/logo/logo.icns" >> $GITHUB_ENV
     - name: Linux Setting
       if: matrix.runs-on == 'ubuntu-latest'
       run: |
@@ -42,15 +43,17 @@ jobs:
         echo "suffix=rpm" >> $GITHUB_ENV
         echo "system=linux" >> $GITHUB_ENV
         echo "args=--linux-shortcut" >> $GITHUB_ENV
+        echo "icon=./docs/logo/logo.png" >> $GITHUB_ENV
     - name: Windows Setting
       if: matrix.runs-on == 'windows-latest'
       run: |
-        $version="${{ github.ref }}".substring("refs/tags/".length)
         # msi|exe
+        $version="${{ github.ref }}".substring("refs/tags/".length)
         echo "suffix=msi" | Out-File -FilePath $env:GITHUB_ENV -Encoding utf8 -Append
         echo "system=win" | Out-File -FilePath $env:GITHUB_ENV -Encoding utf8 -Append
         echo "version=$version" | Out-File -FilePath $env:GITHUB_ENV -Encoding utf8 -Append
         echo "args=--win-shortcut --win-dir-chooser --win-per-user-install" | Out-File -FilePath $env:GITHUB_ENV -Encoding utf8 -Append
+        echo "icon=./docs/logo/logo.ico" >> $GITHUB_ENV
     - name: Set Version
       run: echo "version=${GITHUB_REF##*/}" >> $GITHUB_ENV
     - name: Checkout repository
@@ -66,13 +69,11 @@ jobs:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       run: |
         mkdir -p ./build/snail/
-        cp -v -r ./LICENSE ./build/
-        cp -v -r ./docs/logo.ico ./build/
         cp -v -r ./snail-javafx/target/lib ./build/snail/
         cp -v -r ./snail-javafx/target/snail.javafx-*.jar ./build/snail/
         tar -cvf snail-${{ env.system }}-${{ env.version }}-without-jre.tar -C ./build/ snail
-        jlink --add-modules java.base,java.xml,java.desktop,java.scripting,jdk.unsupported --output ./build/runtime
-        jpackage --name snail --type ${{ env.suffix }} --app-version ${{ env.version }} --vendor acgist --copyright acgist --description "acgist snail" --input ./build/snail/ --main-jar snail.javafx-${{ env.version }}.jar --runtime-image ./build/runtime --icon ./build/logo.ico --license-file ./build/LICENSE --java-options "-server -Xms128m -Xmx256m -XX:NewRatio=2 -XX:SurvivorRatio=2 -Dfile.encoding=UTF-8" --dest ./ $args
+        jlink --add-modules "java.base,java.xml,java.desktop,java.scripting,jdk.unsupported" --output ./build/runtime
+        jpackage --name snail --type ${{ env.suffix }} --app-version ${{ env.version }} --vendor acgist --copyright acgist --description "acgist snail" --input ./build/snail/ --main-jar snail.javafx-${{ env.version }}.jar --runtime-image ./build/runtime --icon ${{ env.icon }} --license-file ./LICENSE --java-options "-server -Xms128m -Xmx256m -XX:NewRatio=2 -XX:SurvivorRatio=2 -Dfile.encoding=UTF-8" --dest ./ ${{ env.args }}
         # 使用mv命令统一文件名称：Windows hub命令不能使用通配符号
         mv *.${{ env.suffix }} snail-${{ env.version }}.${{ env.suffix }}
         # upload-release-asset不能一次上传多个文件使用hub命令上传
